seemingly fixed bottom page content being cut off

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   font-family: "Lucida Console", "Courier New", monospace;
   background-color: black;
   overflow: auto;
-  height: 100vh;
 }
 
 ::-webkit-scrollbar {
