--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,6 @@
 .cardHolder {
   display: grid;
-  height: 100%;
+  height: 100vh;
   padding: 2%;
   gap: 3% 2%;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
